--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            padding: 20px;
+            padding: 0;
             font-family: system-ui, -apple-system, sans-serif;
             background: #f5f5f5;
             direction: rtl;
@@ -16,8 +16,6 @@
             max-width: 800px;
             margin: 0 auto;
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             padding: 20px;
         }
         .title {
