--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         .footer {
             margin-top: 20px;
             padding-top: 10px;
-            border-top: 1px solid #eee;
+            border-top: 1px solid #0000;
             text-align: center;
             color: #666;
             font-size: 14px;
@@ -53,7 +53,7 @@
     <div class="container">
         <div class="title" id="title">عرض المحتوى</div>
         <div class="content" id="content"></div>
-        <div class="footer">تم العرض عبر iframe</div>
+        <div class="footer">Script Hub</div>
     </div>
 
     <script>
