--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             text-align: center;
             color: #666;
             font-size: 14px;
+            user-select: none;
         }
     </style>
 </head>
