--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: system-ui, -apple-system, sans-serif;
-            background: #f5f5f5;
+            background: #fff;
             direction: rtl;
         }
         .container {
@@ -53,7 +53,9 @@
 <body>
     <div class="container">
         <div class="title" id="title">عرض المحتوى</div>
-        <div class="content" id="content"></div>
+        <div class="content" id="content">
+            <div class="footer" style="padding: 0; margin: 0; font-size: 18px;">There is no content to display.</div>
+        </div>
         <div class="footer">Script Hub</div>
     </div>
 
