--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View - عرض المحتوى</title>
+    <script src="https://tybascript1234.github.io/Languag/embed.js"></script>
     <style>
         body {
             margin: 0;
@@ -48,6 +49,45 @@
             font-size: 14px;
             user-select: none;
         }
+        .translat {
+            position: fixed;
+            z-index: 1000;
+            direction: ltr;
+            bottom: 0;
+            left: 0;
+            margin: 20px;
+        }
+        .translat button {
+            cursor: pointer;
+            width: 44px;
+            height: 44px;
+            background: #3894ff;
+            fill: #fff;
+            border: none;
+            border-radius: 100%;
+        }
+        .translat button:hover {
+            background-color: #1f87ff;
+        }
+        .translat button:active {
+            background-color: #0c7dff;
+        }
+        .translat button svg {
+            height: 22px;
+            width: 22px;
+        }
+        .lang {
+            position: absolute;
+            display: none;
+            bottom: 54px;
+            left: -4px;
+        }
+        #myDiv.show {
+            display: block;
+        }
+        #translation_buttons {
+            max-height: 260px !important;
+        }
     </style>
 </head>
 <body>
@@ -58,6 +98,35 @@
         </div>
         <div class="footer">Script Hub</div>
     </div>
+
+
+    <div class="translat">
+        <div class="lang" id="myDiv"><div id="target-container"></div></div>
+        <button id="toggleBtn"><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M478.33 433.6l-90-218a22 22 0 00-40.67 0l-90 218a22 22 0 1040.67 16.79L316.66 406h102.67l18.33 44.39A22 22 0 00458 464a22 22 0 0020.32-30.4zM334.83 362L368 281.65 401.17 362zM267.84 342.92a22 22 0 00-4.89-30.7c-.2-.15-15-11.13-36.49-34.73 39.65-53.68 62.11-114.75 71.27-143.49H330a22 22 0 000-44H214V70a22 22 0 00-44 0v20H54a22 22 0 000 44h197.25c-9.52 26.95-27.05 69.5-53.79 108.36-31.41-41.68-43.08-68.65-43.17-68.87a22 22 0 00-40.58 17c.58 1.38 14.55 34.23 52.86 83.93.92 1.19 1.83 2.35 2.74 3.51-39.24 44.35-77.74 71.86-93.85 80.74a22 22 0 1021.07 38.63c2.16-1.18 48.6-26.89 101.63-85.59 22.52 24.08 38 35.44 38.93 36.1a22 22 0 0030.75-4.9z"/></svg></button>
+    </div>
+
+
+    <script>
+        const btn = document.getElementById("toggleBtn");
+        const div = document.getElementById("myDiv");
+
+        // عند الضغط على الزر
+        btn.addEventListener("mousedown", function (e) {
+          e.stopPropagation(); // منع انتشار الحدث
+          div.classList.toggle("show");
+        });
+      
+        // عند الضغط داخل الديف لا يغلق
+        div.addEventListener("click", function (e) {
+          e.stopPropagation();
+        });
+      
+        document.addEventListener("mousedown", function (e) {
+          if (!div.contains(e.target) && e.target !== btn) {
+            div.classList.remove("show");
+          }
+        });
+    </script>
 
     <script>
         // استقبال الرسائل من الصفحة الأصلية
