--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
             bottom: 0;
             left: 0;
             margin: 20px;
+            margin-left: 10px;
         }
         .translat .button {
             cursor: pointer;
+            transition: 0.2s ease;
             width: 44px;
             height: 44px;
             background: #3894ff;
