--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
         .translat .button {
             cursor: pointer;
-            transition: 0.2s ease;
+            transition: 0.3s ease;
             width: 44px;
             height: 44px;
             background: #3894ff;
@@ -73,6 +73,8 @@
             background-color: #1f87ff;
         }
         .translat .button:active {
+            transition: 0.1s ease;
+            transform: scale(0.95);
             background-color: #0c7dff;
         }
         .translat .button svg {
